#ACLOCAL_AMFLAGS = -I config/m4
utils_LTLIBRARIES = libha_utils.la
libha_utils_la_SOURCES = 			\
alg_except.cpp	\
alg_opt.cpp		\
common.cpp		\
matrix.cpp		\
m_algorithm.cpp	\
prg.cpp		\
utils.cpp

utilsinc_HEADERS = 				\
alg_except.h			\
alg_opt.h			\
common.h			\
matrix.h			\
mbuf_traits.h			\
m_algorithm.h			\
prg.h

jamainc_HEADERS = 				\
jama/jama_cholesky.h			\
jama/jama_eig.h			\
jama/jama_lu.h			\
jama/jama_qr.h			\
jama/jama_svd.h			\
jama/tnt.h			\
jama/tnt_array1d.h			\
jama/tnt_array1d_utils.h			\
jama/tnt_array2d.h			\
jama/tnt_array2d_utils.h			\
jama/tnt_array3d.h			\
jama/tnt_array3d_utils.h			\
jama/tnt_cmat.h			\
jama/tnt_fortran_array1d.h			\
jama/tnt_fortran_array1d_utils.h			\
jama/tnt_fortran_array2d.h			\
jama/tnt_fortran_array2d_utils.h			\
jama/tnt_fortran_array3d.h			\
jama/tnt_fortran_array3d_utils.h			\
jama/tnt_i_refvec.h			\
jama/tnt_math_utils.h			\
jama/tnt_sparse_matrix_csr.h			\
jama/tnt_stopwatch.h			\
jama/tnt_subscript.h			\
jama/tnt_vec.h			\
jama/tnt_version.h

libha_utils_la_LIBADD = 
libha_utils_la_CPPFLAGS = -W -Wall
libha_utils_la_CXXFLAGS = 
